# dts_intraday_ai

./: .env  .env.example  .gitignore  AI milestone checklist.txt  Dynamic_Checklist.md  Local_and_GitHub_workflow.md  Next Development Roadmap.md  OLD strategy_spec.md  Project Context.md  README.md  Test_Error_Fix_Record.md  debug.md  directory.txt  pyproject.toml  refence.txt  reference.txt  requirements-dev.in  requirements.in  requirements.txt  strategy_spec - 2.9.25.md  strategy_spec - old.md  strategy_spec 26.08.25.md  strategy_spec 29.08.25.md  strategy_spec.md  strategy_spec16.08.25.md  windsurf_prompt.txt
.github/workflows/: tests.yml
OLD working files/: backtest_runner.py  test_integration.py
data/: holidays.json  trade_log.csv
src/: .env  __init__.py  ai_module.py  ai_webhook.py  analytics_manager.py  angel_order.py  backtest_dashboard.py  backtest_runner.py  config.py  constants.py  data_fetcher.py  holiday_manager.py  intraday_dashboard_GPT.py  live_stream.py  news_filter.py  order_manager.py  paper_trade_system.py  redis_store.py  strategy.py  trade_logger.py  utils.py
tests/: __init__.py  conftest.py  test_analytics_manager.py  test_backtest.py  test_backtest_setup.py  test_holiday_manager.py  test_integration.py  test_live_stream.py  test_strategy.py  test_strategy_ai.py  test_trade_logger.py  test_utils.py
